force-app/main/default/objects/Fortnight__c/Fortnight__c.object-meta.xml
<CustomObject>
    <label>Fortnight</label>
    <nameField>
        <displayFormat>FN# {0}-{MM}{YY}</displayFormat>
        <label>Fortnight Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fortnights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>