force-app/main/default/objects/Fortnight__c/fields/Total_fixed_costs__c.field-meta.xml
<CustomField>
    <fullName>Total_fixed_costs__c</fullName>
    <label>Total fixed costs</label>
    <summarizedField>Fixed_Cost__c.Value__c</summarizedField>
    <summaryForeignKey>Fixed_Cost__c.Fortnight__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>