force-app/main/default/objects/Fortnight__c/fields/Total_purchases__c.field-meta.xml
<CustomField>
    <fullName>Total_purchases__c</fullName>
    <label>Total purchases</label>
    <summarizedField>Purchase_Items__c.Total_Value__c</summarizedField>
    <summaryForeignKey>Purchase_Items__c.Fortnight__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>