force-app/main/default/objects/Fortnight__c/fields/Total_Spent__c.field-meta.xml
<CustomField>
    <fullName>Total_Spent__c</fullName>
    <formula>Total_fixed_costs__c + Total_purchases__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>