force-app/main/default/objects/Fortnight__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_fixed_costs__c</columns>
    <columns>Total_purchases__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>